build(package): simplify repository fields
created using @octoherd and https://github.com/gr2m/octoherd-script-normalize-package-repository-field

--- a/package.json
+++ b/package.json
@@ -13,5 +13,6 @@
   "dependencies": {
     "nano": "^6.1.2",
     "pouchdb-server": "^0.6.5"
-  }
+  },
+  "repository": "github:gr2m/pouchdb-server-continuous-feed-debug"
 }
